# quantilica-io

./: .gitignore  README.md  pyproject.toml
src/quantilica_io/: __init__.py  reader.py  schema.py  writer.py
tests/: test_io.py
