[project]
name = "quantilica-io"
version = "0.1.0"
description = "Analytical data processing and conversion layer for Quantilica"
readme = "README.md"
authors = [
    { name = "Komesu, D.K.", email = "daniel@dkko.me" },
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "quantilica-core @ git+https://github.com/Quantilica/quantilica-core.git",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quantilica_io"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
